[package]
name = "advent-of-code-2019"
version = "0.2.0"
authors = ["John Erickson <john.t.erickson@gmail.com>"]
edition = "2018"

[dependencies]
aoc-runner = "*"
aoc-runner-derive = "*"
fnv = "1.0.6"
chrono = { version = "0.4.23", default-features = false, features = ["clock", "std"] }
petgraph = "0.4.13"
sprs = "0.7.1"
permute = "*"
crossbeam-utils = "*"
num-integer = "*"
crossterm = "*"
ndarray = "*"